[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/WeaponPickerScreen.gd" type="Script" id=1]
[ext_resource path="res://Resources/Retron2000Title.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/Retron2000Body.tres" type="DynamicFont" id=3]

[node name="WeaponPickerScreen" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 990.0
margin_bottom = 566.0
custom_constants/separation = 20

[node name="GameTitle" type="Label" parent="MarginContainer/Rows"]
margin_right = 970.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = "NAME OF OUR GAME"
align = 1

[node name="Paragraph1" type="Label" parent="MarginContainer/Rows"]
margin_top = 68.0
margin_right = 970.0
margin_bottom = 131.0
rect_min_size = Vector2( 600, 40 )
custom_fonts/font = ExtResource( 3 )
text = "You've died. But rather than send you immediately to the afterlife, the gods have chosen you for reincarnation to fight in their arena."
align = 1
autowrap = true

[node name="Paragraph2" type="Label" parent="MarginContainer/Rows"]
margin_top = 151.0
margin_right = 970.0
margin_bottom = 191.0
rect_min_size = Vector2( 600, 40 )
custom_fonts/font = ExtResource( 3 )
text = "Equip yourself, for battle looms nears."
align = 1
autowrap = true

[node name="DeathCountText" type="Label" parent="MarginContainer/Rows"]
margin_top = 211.0
margin_right = 970.0
margin_bottom = 251.0
rect_min_size = Vector2( 600, 40 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.764706, 0.290196, 0.290196, 1 )
align = 1
autowrap = true
uppercase = true

[node name="WeaponColumns" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 271.0
margin_right = 970.0
margin_bottom = 471.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
custom_constants/separation = 80
alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Rows"]
margin_top = 491.0
margin_right = 970.0
margin_bottom = 495.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Rows"]
margin_top = 515.0
margin_right = 970.0
margin_bottom = 535.0

[node name="Button" type="Button" parent="MarginContainer/Rows/CenterContainer"]
margin_left = 462.0
margin_right = 507.0
margin_bottom = 20.0
disabled = true
text = "Start!"
[connection signal="pressed" from="MarginContainer/Rows/CenterContainer/Button" to="MarginContainer" method="_on_Start_Button_pressed"]
